docs: consolidate docs — single-language (zh), merge migration, fold module READMEs (34→19 .md)
Documentation slim-down with no loss of meaning:
- Language dedup: drop English deep docs + every *.zh-CN.md variant; Chinese
  content promoted to the canonical *.md name; strip bilingual switcher lines;
  rewrite cross-links .zh-CN.md → .md. Root README stays bilingual (the only
  English remaining), as the project front door.
- Merge the two migration runbooks (password→SSO / SSO→password) into a single
  bidirectional docs/migration.md; fix all referrers.
- Fold backend/README.md + frontend/README.md into their AGENTS.md (JVM flags,
  build/test commands) and delete them — one entry doc per module (AGENTS).
- Dedup the triplicated "Behavioral guidelines" into a single superset in the
  root AGENTS.md; backend/frontend AGENTS now point to it (no content lost).
- Env config: single backend/.env.example template (was .env.dev +
  .env.prod.example), copy-to-.env; new CORE_FORWARD_HEADERS_STRATEGY /
  CORE_TRUST_FORWARDED_HEADERS knobs documented; CORE_JWT_SECRET marked required
  in all modes. Sync deployment / data-scope / features-and-tests / break-glass
  docs with the actuator-auth, data-scope-by-id, XFF and break-glass changes.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>